merchant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: merchant-module
  name: merchant-module-deployment
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: merchant-module
  template:
    metadata:
      labels:
        app: merchant-module
    spec:
      containers:
        - name: merchant-module-container
          image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/merchant-module:latest
          ports:
            - containerPort: 3003
