VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"                                                                                                                                                                                                                   
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  gateways:
  - my-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: client-service
        port:
          number: 3000
