vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.sharathdevops.co.in"
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client
spec:
  hosts:
    - "client.sharathdevops.co.in"
  gateways:
    - test
  http:
    -  route:
       - destination:
          host: clent.demo.svc.cluster.local
          port:
            number: 3000
